[package]
name = "cryptojs-rs"
version = "0.1.0"
edition = "2021"
authors = ["DaniPopes <danipopes1@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/danipopes/cryptojs-rs"
homepage = "https://docs.rs/cryptojs-rs"
description = "CryptoJS equivalents in Rust"
keywords = ["crypto", "cryptojs", "aes"]

[dependencies]
aes = "0.8"
base64 = { version = "0.13", features = ["alloc"] }
cbc = { version = "0.1", features = ["block-padding"] }
md-5 = "0.10"
hex = "0.4"

# std
rand = { version = "0.8", optional = true }

# serde
serde = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = ["rand"]
